--- a/src/components/PokemonList.astro
+++ b/src/components/PokemonList.astro
@@ -1,55 +1,28 @@
 ---
 import PokemonCard from "./PokemonCard.astro";
-import Enamorus from "../assets/images/pokemon/0905Enamorus2.png";
-import Bulbasaur from "../assets/images/pokemon/0001Bulbasaur.webp";
-import Ivysaur from "../assets/images/pokemon/0002Ivysaur.png";
-import Venusaur from "../assets/images/pokemon/0003Venusaur.png";
 import { setRoute } from "../utils";
 
-const newsText = `Team Rocket, the perennial troublemakers of the Pokémon universe, are once again blasting off into the horizon. With their classic motto and unwavering determination, Jessie, James, and Meowth are up to their mischievous antics, soaring into the sky, ensuring that they're never grounded for too long.`;
-const items = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15];
-const pokemonURL = setRoute("/pokedex/enamorus");
+interface Props {
+  title: string;
+  pokemonList: any;
+}
+
+const { pokemonList, title } = Astro.props;
 ---
 
 <div class="pokemon-list">
   <div class="container">
-    <h2>Pokemon list</h2>
+    <h2>{title}</h2>
     <div class="pokemon-list-items">
       {
-        items.map(() => (
-          <>
-            <PokemonCard
-              name="Bulbasaur"
-              number={1}
-              image={Bulbasaur}
-              imageAltText="this is an image"
-              href={pokemonURL}
-            />
-
-            <PokemonCard
-              name="Ivysaur"
-              number={2}
-              image={Ivysaur}
-              imageAltText="this is an image"
-              href={pokemonURL}
-            />
-
-            <PokemonCard
-              name="Venusaur"
-              number={2}
-              image={Venusaur}
-              imageAltText="this is an image"
-              href={pokemonURL}
-            />
-
-            <PokemonCard
-              name="Enamorus"
-              number={905}
-              image={Enamorus}
-              imageAltText="this is an image"
-              href={pokemonURL}
-            />
-          </>
+        pokemonList.map((pokemon) => (
+          <PokemonCard
+            name={pokemon.title}
+            number={pokemon.pokemon_number}
+            image={pokemon.image.url}
+            imageAltText="this is an image"
+            href={setRoute(pokemon.url)}
+          />
         ))
       }
     </div>
