--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -1,9 +1,9 @@
 ---
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import getDefaulLayoutData from "../mappers/layouts/Default";
+import getDefaultLayoutData from "../mappers/layouts/Default";
 
-const layoutData = await getDefaulLayoutData();
+const layoutData = await getDefaultLayoutData();
 
 interface Props {
   headTitle: string;
