--- a/src/components/BackButton.astro
+++ b/src/components/BackButton.astro
@@ -4,9 +4,10 @@ import ArrowLeft from "../assets/icons/arrow-left-solid.svg?raw";
 interface Props {
   href: string;
   label: string;
+  textColor: string;
 }
 
-const { href, label } = Astro.props;
+const { href, label, textColor } = Astro.props;
 ---
 
 <div class="container">
@@ -18,14 +19,14 @@ const { href, label } = Astro.props;
   </div>
 </div>
 
-<style scoped lang="scss">
+<style scoped lang="scss" define:vars={{ textColor }}>
   .backButton {
     width: fit-content;
     z-index: 10;
     position: relative;
 
     a {
-      color: white;
+      color: var(--textColor);
       text-decoration: none;
       display: flex;
       align-items: center;
@@ -43,7 +44,7 @@ const { href, label } = Astro.props;
   @use "../styles/global.scss";
   .backButton {
     svg {
-      fill: white;
+      fill: var(--textColor);
       width: 30px;
     }
   }
