--- a/src/pages/pokedex/[pokemon].astro
+++ b/src/pages/pokedex/[pokemon].astro
@@ -1,26 +1,37 @@
 ---
-import Default from "../../layouts/Default.astro";
-import NewsIntro from "../../components/NewsIntro.astro";
 import ZebraStripe from "../../components/ZebraStripe.astro";
 import SimpleTextBlock from "../../components/SimpleTextBlock.astro";
 import EvolutionBlock from "../../components/EvolutionBlock.astro";
-import Navigation from "../../components/Navigation.astro";
-import newsImage from "../../assets/images/team-rocket-blasting-off.jpg";
+import PokemonBaseInfo from "../../components/PokemonBaseInfo.astro";
 import Pokedex from "../../layouts/Pokedex.astro";
+import getPokemonInfo from "../../mappers/pages/PokemonDetail";
+import PageContent from "../../components/PageContent.astro";
 const text = `Enter the enchanting world of Pokémon with our concise news coverage. Whether you're a devoted Trainer or new to the game, our page keeps you updated on the latest in the Pokémon universe. From new regions to legendary encounters, events, evolutions, and controversies, we've got it all. Dive in and stay informed!`;
-const newsText = `Team Rocket, the perennial troublemakers of the Pokémon universe, are once again blasting off into the horizon. With their classic motto and unwavering determination, Jessie, James, and Meowth are up to their mischievous antics, soaring into the sky, ensuring that they're never grounded for too long.`;
 
-const { pokemon } = Astro.params;
+const pokemon = await getPokemonInfo(Astro.url.pathname);
+const pokemonTypes = pokemon.types.map((pkmn) => pkmn.title);
 ---
 
-<Pokedex headTitle="Enamorus | PokemonPrime">
+<Pokedex headTitle={pokemon.name} backgroundColor={pokemon.backgroundColor}>
+  <PokemonBaseInfo
+    name={pokemon.name}
+    number={pokemon.number}
+    pokemonTypes={pokemonTypes}
+    typeColor={pokemon.backgroundColor}
+    image={pokemon.image.url}
+    imageAlt={`Image of ${pokemon.name}`}
+  />
   <main>
     <ZebraStripe>
-      <SimpleTextBlock title={`hi ${pokemon}`} text={text} />
+      <SimpleTextBlock title="Base info" text={pokemon.baseInfo} />
     </ZebraStripe>
 
     <ZebraStripe>
-      <EvolutionBlock />
+      <EvolutionBlock evolutions={pokemon.evolutionChain} />
     </ZebraStripe>
   </main>
 </Pokedex>
+
+<script define:vars={{ pokemon }}>
+  console.log(pokemon);
+</script>
