--- a/src/pages/news/[article].astro
+++ b/src/pages/news/[article].astro
@@ -40,6 +40,14 @@ const metaDescription =
     p:not(:last-of-type) {
       margin-bottom: 2rem;
     }
+
+    iframe {
+      width: 100%;
+      aspect-ratio: 16/9;
+      margin-bottom: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 0 4px #505050;
+    }
   }
 </style>
 
