--- a/src/components/PokemonInfoBlock.astro
+++ b/src/components/PokemonInfoBlock.astro
@@ -42,7 +42,7 @@ const typeBg = defineTypeBgColor(bg);
 <a href={pokemonURL} class="pokemon-info-block">
   <h3 class="pokemon-info-block-title margin-bottom-0">{title}</h3>
   <div class="image">
-    <img src={imageUrl} alt={`image of ${name}`} />
+    <img src={imageUrl} alt={`Image of ${name}`} />
   </div>
   <div class="pokemon-info">
     <div class="pokemon-name-and-number">
