--- a/src/pages/pokedex/[pokemon].astro
+++ b/src/pages/pokedex/[pokemon].astro
@@ -9,7 +9,7 @@ import PageContent from "../../components/PageContent.astro";
 const text = `Enter the enchanting world of Pokémon with our concise news coverage. Whether you're a devoted Trainer or new to the game, our page keeps you updated on the latest in the Pokémon universe. From new regions to legendary encounters, events, evolutions, and controversies, we've got it all. Dive in and stay informed!`;
 
 const pokemon = await getPokemonInfo(Astro.url.pathname);
-const pokemonTypes = pokemon.types.map((pkmn) => pkmn.title);
+const pokemonTypes = pokemon.types.map((type) => type.title);
 ---
 
 <Pokedex headTitle={pokemon.name} backgroundColor={pokemon.backgroundColor}>
